--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 /* GOOGLE POPPINS & OPEN SANS FONT */
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap');
 
-
 /* GLOBAL STYLES */
+
 *,
 *::before,
 *::after {
@@ -27,6 +28,7 @@ h3 {
 
 
 /* VARIABLES */
+
 :root {
     --pink: hsl(322, 100%, 66%);
     --pale-cyan: hsl(193, 100%, 96%);
@@ -36,6 +38,7 @@ h3 {
 
 
 /* BUTTONS */
+
 .btn {
     border: none;
     outline: none;
@@ -44,13 +47,16 @@ h3 {
     font-weight: 700;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
+
 .btn:hover {
     cursor: pointer;
     opacity: .8;
 }
+
 .btn.btn-primary {
     background: #fff;
 }
+
 .btn.btn-secondary {
     color: #fff;
     background-color: var(--pink);
@@ -58,45 +64,71 @@ h3 {
 
 
 /* HERO SECTION */
+
 .hero-section {
     height: 100vh;
     background: var(--pale-cyan) url("./img/bg-hero-desktop.svg") no-repeat;
     padding: 36px 59px;
 }
+
 nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 36px;
 }
+
 .logo .bg-img-logo {
     height: 26px;
     width: auto;
 }
+
 .hero-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
+
 .hero-content .text-info {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
 }
+
 .hero-content .text-info p {
     margin: 25px 0;
 }
+
 .hero-content .illustration {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
 }
+
 .hero-content .illustration img {
     width: 100%;
 }
 
 
 /* FEATURES SECTION */
+
 .features-section {
     padding: 100px 59px 200px 59px;
     position: relative;
 }
+
 .feature {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 400px;
     margin-bottom: 45px;
@@ -104,79 +136,134 @@ nav {
     box-shadow: rgba(100, 100, 111, .2) 0px 7px 29px 0px;
     border-radius: 20px;
 }
+
 .feature .text-info {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
+
 .feature .text-info p {
     color: var(--grayish-blue);
 }
+
 .feature .illustration {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
 }
+
 .feature .illustration img {
     height: 90%;
 }
+
 .feature:nth-child(even) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
     flex-direction: row-reverse;
 }
+
 .feature:nth-child(even) .illustration {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
 }
 
 
 /* CTA BUTTON */
+
 .cta {
     border-radius: 20px;
     box-shadow: rgba(100, 100, 111, .2) 0px 7px 29px 0px;
     max-width: 600px;
     width: 100%;
     padding: 50px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     position: absolute;
     bottom: -80px;
     z-index: 10;
     background-color: #fff;
     left: 50%;
+    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
+
 .cta h2 {
     margin-bottom: 20px;
 }
 
 
 /* FOOTER SECTION */
+
 footer {
     background-color: var(--dark-cyan);
     color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     padding: 150px 70px 70px 70px;
     font-size: 14px;
     position: relative;
 }
+
 footer .logo img {
     height: 26px;
 }
+
 footer .contact {
     max-width: 350px;
     width: 100%;
     margin-right: 2rem;
 }
+
 footer .contact p {
     margin: 20px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
 }
+
 footer .contact p img {
     height: 14px;
     margin-right: 15px;
@@ -185,33 +272,49 @@ footer .contact p img {
 
 
 /* FOOTER LINKS */
+
 .footer-links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     width: 100%;
 }
+
 .footer-links .links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
+
 .footer-links a {
     text-decoration: none;
     color: #fff;
     margin-bottom: 15px;
 }
+
 .footer-links a:hover {
     text-decoration: underline;
 }
 
 
 /* FOOTER SOCIALS */
+
 footer .socials {
     font-size: 20px;
-} 
+}
 
 
 /* COPYRIGHT */
+
 .copyright {
     position: absolute;
     right: 30px;
@@ -220,9 +323,8 @@ footer .socials {
 }
 
 
-
-
 /* MEDIA QUERIES */
+
 @media (max-width: 376px) {
     .hero-section {
         padding: 20px;
@@ -235,13 +337,15 @@ footer .socials {
         height: 18px;
     }
     .hero-content {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
     .hero-content .text-info {
         text-align: center;
         margin: 3rem 0;
     }
-
     /* FEATURES SECTION */
     .features-section {
         padding: 100px 20px 200px 20px;
@@ -250,6 +354,9 @@ footer .socials {
         font-size: 25px;
     }
     .feature {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
         text-align: center;
         height: 500px;
@@ -260,9 +367,11 @@ footer .socials {
         width: 90%;
     }
     .feature:nth-child(even) {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
     }
-
     /* CTA BUTTON */
     .cta {
         text-align: center;
@@ -272,25 +381,29 @@ footer .socials {
     .cta h2 {
         font-size: 18px;
     }
-
     /* FOOTER SECTION */
     footer {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
         align-items: flex-start;
         padding: 150px 30px 70px 30px;
     }
-
     /* FOOTER LINKS */
     footer .socials {
+        -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
         align-self: center;
     }
-
     /* COPYRIGHT */
     .copyright {
         right: 50%;
+        -webkit-transform: translateX(50%);
         transform: translateX(50%);
         max-width: 300px;
         width: 100%;
     }
-    
 }
